<resources>
    <string name="app_name">Rebooked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="login_now">Login Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="kindly_fill_the_information">Kindly Fill the information</string>
    <string name="donate_books">Donate Books</string>
    <string name="upload_book_cover">Upload Book Cover</string>
    <string name="book_name">Book Name</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="donate">Donate</string>
    <string name="search_your_nfavourite_book">Search your\nFavourite Book</string>
    <string name="mark">Mark Aryan</string>
    <string name="_200_points">200 Points</string>
    <string name="wishlist">Wishlist</string>
    <string name="donated">Donated</string>
    <string name="donation_history">Donation History</string>
    <string name="orders">Orders</string>
    <string name="memory">Memory</string>
    <string name="purchase">Purchase</string>
    <string name="recent_books">Recent Books</string>
    <string name="popular_books">Popular Books</string>
    <string name="organisation">Organisation</string>
    <string name="nit_hamirpur">NIT Hamirpur</string>
    <string name="nescafe">Nescafe</string>
</resources>