<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="24dp"
    tools:context=".fragments.nav.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/colorGreenDark"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mark"
        android:textColor="@color/colorGreenDark"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/rank" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/_200_points"
        android:textColor="@color/colorGreenDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/wishlist" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="Orders" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/donation_history" />


</LinearLayout>