<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="24dp"
    tools:context=".fragments.nav.SearchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/colorGreenDark"
        android:textSize="30sp" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/search_box"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search" />

    <LinearLayout
        android:id="@+id/layoutSearchBefore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgSearchBook"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/search_books" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/search_your_nfavourite_book"
            android:textAlignment="center"
            android:textColor="@color/colorGreenDark"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>